[update] add perfect-scrollbar, scss fixes

--- a/src/styles/components/organisms/details.scss
+++ b/src/styles/components/organisms/details.scss
@@ -2,4 +2,5 @@
     margin-top: 28px;
     margin-bottom: 47px;
     padding: 0px 24px;
+    display: block;
 }
